# ML_Algorithms

./: .gitignore
Computer_Vision/: Untitled.ipynb  camera_calibration.py  edge_detection.py  mtx_quant.py
DataStructures/LinkedList/: double_linked_list.py  linked_list.py  single_linked_list.py  traversal.py
Deep_Learning/: perceptron.py
Deep_Learning/Convolution/: average_pool.py  conv1d.py  conv2d.py  convtranspose1d.py  max_pool.py  unfold.py
Deep_Learning/Normalization/: batch_norm.py
Deep_Learning/Optimization/: autograd.py
Deep_Learning/Transformers/: pos_encoding.py
LLM/: LoRA.py  moe.py  quantization.cu  quantization.py
LLM/decoding/: strategies.ipynb
LLM/pipelines/: gpt_oss.py  qwen3.py  qwen3_mx.py
ML_Coding/: dropout.py
ML_Coding/Attention/: self_attention.py
Machine_Learning/: feature_scaling.py  gini_impurity.py  k_means.py
SQL/: create.sql  db.py  delete_1.sql  delete_2.sql  insert.sql  query.py  query.sql  query_agg.sql  query_all.sql  query_groupby.sql  query_name.sql  update_1.sql  update_2.sql
agents/: pyproject.toml
agents/chat_ollama/: chat.py
