[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.3",
    "langchain>=1.0.3",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.12.3",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
